Fixed shifting padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,8 @@ header {
     color: #fff;  
     text-decoration:none;
     border-bottom: 2px solid transparent;
+    padding-right: 5px;
+    padding-left:5px;
 }
 
 .main-nav li a:hover,
